load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "crkreflect",
    srcs = [
        "get_provider.go",
        "group_version.go",
        "id_prefix.go",
        "id_prefix_from_id.go",
        "kind_by_id_prefix.go",
        "kind_by_kind_name.go",
        "kind_extractor.go",
        "kind_from_string.go",
        "kind_from_yaml.go",
        "kind_map_gen.go",
        "kind_meta.go",
        "kind_name_by_kind.go",
        "kind_to_kind_meta_map.go",
        "kinds_list.go",
        "new_instance.go",
        "prerequisites.go",
        "provider_meta.go",
        "providers_list.go",
    ],
    importpath = "github.com/plantonhq/planton/pkg/crkreflect",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/dev/planton/shared/cloudresourcekind",
        "//pkg/apis/gvk",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
    ],
)

go_test(
    name = "crkreflect_test",
    srcs = [
        "kind_by_id_prefix_test.go",
        "kind_from_string_test.go",
        "prerequisites_test.go",
    ],
    embed = [":crkreflect"],
    deps = ["//apis/dev/planton/shared/cloudresourcekind"],
)
