load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "crkreflect",
    srcs = [
        "get_provider.go",
        "group_version.go",
        "id_prefix.go",
        "id_prefix_from_id.go",
        "kind_by_id_prefix.go",
        "kind_by_kind_name.go",
        "kind_extractor.go",
        "kind_from_string.go",
        "kind_from_yaml.go",
        "kind_map_gen.go",
        "kind_meta.go",
        "kind_name_by_kind.go",
        "kind_to_kind_meta_map.go",
        "kinds_list.go",
        "new_instance.go",
        "prerequisites.go",
        "provider_meta.go",
        "providers_list.go",
    ],
    importpath = "github.com/plantonhq/planton/pkg/crkreflect",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/dev/planton/provider/_test/testcloudresourcegeneric/v1:testcloudresourcegeneric",
        "//apis/dev/planton/provider/_test/testcloudresourcekubernetes/v1:testcloudresourcekubernetes",
        "//apis/dev/planton/provider/alicloud/alicloudapplicationloadbalancer/v1:alicloudapplicationloadbalancer",
        "//apis/dev/planton/provider/alicloud/alicloudcdndomain/v1:alicloudcdndomain",
        "//apis/dev/planton/provider/alicloud/alicloudceninstance/v1:alicloudceninstance",
        "//apis/dev/planton/provider/alicloud/alicloudcontainerregistry/v1:alicloudcontainerregistry",
        "//apis/dev/planton/provider/alicloud/aliclouddnsrecord/v1:aliclouddnsrecord",
        "//apis/dev/planton/provider/alicloud/aliclouddnszone/v1:aliclouddnszone",
        "//apis/dev/planton/provider/alicloud/alicloudecsinstance/v1:alicloudecsinstance",
        "//apis/dev/planton/provider/alicloud/alicloudeipaddress/v1:alicloudeipaddress",
        "//apis/dev/planton/provider/alicloud/alicloudfunction/v1:alicloudfunction",
        "//apis/dev/planton/provider/alicloud/alicloudkmskey/v1:alicloudkmskey",
        "//apis/dev/planton/provider/alicloud/alicloudkubernetescluster/v1:alicloudkubernetescluster",
        "//apis/dev/planton/provider/alicloud/alicloudkubernetesnodepool/v1:alicloudkubernetesnodepool",
        "//apis/dev/planton/provider/alicloud/alicloudlogproject/v1:alicloudlogproject",
        "//apis/dev/planton/provider/alicloud/alicloudmongodbinstance/v1:alicloudmongodbinstance",
        "//apis/dev/planton/provider/alicloud/alicloudnasfilesystem/v1:alicloudnasfilesystem",
        "//apis/dev/planton/provider/alicloud/alicloudnatgateway/v1:alicloudnatgateway",
        "//apis/dev/planton/provider/alicloud/alicloudnetworkloadbalancer/v1:alicloudnetworkloadbalancer",
        "//apis/dev/planton/provider/alicloud/alicloudpolardbcluster/v1:alicloudpolardbcluster",
        "//apis/dev/planton/provider/alicloud/alicloudprivatednszone/v1:alicloudprivatednszone",
        "//apis/dev/planton/provider/alicloud/alicloudrampolicy/v1:alicloudrampolicy",
        "//apis/dev/planton/provider/alicloud/alicloudramrole/v1:alicloudramrole",
        "//apis/dev/planton/provider/alicloud/alicloudrdsinstance/v1:alicloudrdsinstance",
        "//apis/dev/planton/provider/alicloud/alicloudredisinstance/v1:alicloudredisinstance",
        "//apis/dev/planton/provider/alicloud/alicloudrocketmqinstance/v1:alicloudrocketmqinstance",
        "//apis/dev/planton/provider/alicloud/alicloudsaeapplication/v1:alicloudsaeapplication",
        "//apis/dev/planton/provider/alicloud/alicloudsecuritygroup/v1:alicloudsecuritygroup",
        "//apis/dev/planton/provider/alicloud/alicloudstoragebucket/v1:alicloudstoragebucket",
        "//apis/dev/planton/provider/alicloud/alicloudvpc/v1:alicloudvpc",
        "//apis/dev/planton/provider/alicloud/alicloudvpngateway/v1:alicloudvpngateway",
        "//apis/dev/planton/provider/alicloud/alicloudvswitch/v1:alicloudvswitch",
        "//apis/dev/planton/provider/atlas/atlasmongodb/v1:atlasmongodb",
        "//apis/dev/planton/provider/auth0/auth0action/v1:auth0action",
        "//apis/dev/planton/provider/auth0/auth0client/v1:auth0client",
        "//apis/dev/planton/provider/auth0/auth0connection/v1:auth0connection",
        "//apis/dev/planton/provider/auth0/auth0eventstream/v1:auth0eventstream",
        "//apis/dev/planton/provider/auth0/auth0resourceserver/v1:auth0resourceserver",
        "//apis/dev/planton/provider/auth0/auth0role/v1:auth0role",
        "//apis/dev/planton/provider/aws/awsalb/v1:awsalb",
        "//apis/dev/planton/provider/aws/awsapprunnerservice/v1:awsapprunnerservice",
        "//apis/dev/planton/provider/aws/awsathenaworkgroup/v1:awsathenaworkgroup",
        "//apis/dev/planton/provider/aws/awsbatchcomputeenvironment/v1:awsbatchcomputeenvironment",
        "//apis/dev/planton/provider/aws/awscertmanagercert/v1:awscertmanagercert",
        "//apis/dev/planton/provider/aws/awsclientvpn/v1:awsclientvpn",
        "//apis/dev/planton/provider/aws/awscloudfront/v1:awscloudfront",
        "//apis/dev/planton/provider/aws/awscloudwatchalarm/v1:awscloudwatchalarm",
        "//apis/dev/planton/provider/aws/awscloudwatchloggroup/v1:awscloudwatchloggroup",
        "//apis/dev/planton/provider/aws/awscodebuildproject/v1:awscodebuildproject",
        "//apis/dev/planton/provider/aws/awscodepipeline/v1:awscodepipeline",
        "//apis/dev/planton/provider/aws/awscognitoidentityprovider/v1:awscognitoidentityprovider",
        "//apis/dev/planton/provider/aws/awscognitouserpool/v1:awscognitouserpool",
        "//apis/dev/planton/provider/aws/awsdocumentdb/v1:awsdocumentdb",
        "//apis/dev/planton/provider/aws/awsdynamodb/v1:awsdynamodb",
        "//apis/dev/planton/provider/aws/awsec2instance/v1:awsec2instance",
        "//apis/dev/planton/provider/aws/awsecrrepo/v1:awsecrrepo",
        "//apis/dev/planton/provider/aws/awsecscluster/v1:awsecscluster",
        "//apis/dev/planton/provider/aws/awsecsservice/v1:awsecsservice",
        "//apis/dev/planton/provider/aws/awsegressonlyinternetgateway/v1:awsegressonlyinternetgateway",
        "//apis/dev/planton/provider/aws/awsekscluster/v1:awsekscluster",
        "//apis/dev/planton/provider/aws/awseksnodegroup/v1:awseksnodegroup",
        "//apis/dev/planton/provider/aws/awselasticfilesystem/v1:awselasticfilesystem",
        "//apis/dev/planton/provider/aws/awselasticip/v1:awselasticip",
        "//apis/dev/planton/provider/aws/awseventbridgebus/v1:awseventbridgebus",
        "//apis/dev/planton/provider/aws/awseventbridgerule/v1:awseventbridgerule",
        "//apis/dev/planton/provider/aws/awsfsxlustrefilesystem/v1:awsfsxlustrefilesystem",
        "//apis/dev/planton/provider/aws/awsfsxontapfilesystem/v1:awsfsxontapfilesystem",
        "//apis/dev/planton/provider/aws/awsfsxontapstoragevirtualmachine/v1:awsfsxontapstoragevirtualmachine",
        "//apis/dev/planton/provider/aws/awsfsxontapvolume/v1:awsfsxontapvolume",
        "//apis/dev/planton/provider/aws/awsfsxopenzfsfilesystem/v1:awsfsxopenzfsfilesystem",
        "//apis/dev/planton/provider/aws/awsfsxwindowsfilesystem/v1:awsfsxwindowsfilesystem",
        "//apis/dev/planton/provider/aws/awsglobalaccelerator/v1:awsglobalaccelerator",
        "//apis/dev/planton/provider/aws/awsgluecatalogdatabase/v1:awsgluecatalogdatabase",
        "//apis/dev/planton/provider/aws/awshttpapigateway/v1:awshttpapigateway",
        "//apis/dev/planton/provider/aws/awsiamoidcprovider/v1:awsiamoidcprovider",
        "//apis/dev/planton/provider/aws/awsiamrole/v1:awsiamrole",
        "//apis/dev/planton/provider/aws/awsiamuser/v1:awsiamuser",
        "//apis/dev/planton/provider/aws/awsinternetgateway/v1:awsinternetgateway",
        "//apis/dev/planton/provider/aws/awskinesisfirehose/v1:awskinesisfirehose",
        "//apis/dev/planton/provider/aws/awskinesisstream/v1:awskinesisstream",
        "//apis/dev/planton/provider/aws/awskinesisstreamconsumer/v1:awskinesisstreamconsumer",
        "//apis/dev/planton/provider/aws/awskmskey/v1:awskmskey",
        "//apis/dev/planton/provider/aws/awslambda/v1:awslambda",
        "//apis/dev/planton/provider/aws/awsmemcachedelasticache/v1:awsmemcachedelasticache",
        "//apis/dev/planton/provider/aws/awsmemorydbcluster/v1:awsmemorydbcluster",
        "//apis/dev/planton/provider/aws/awsmskcluster/v1:awsmskcluster",
        "//apis/dev/planton/provider/aws/awsmwaaenvironment/v1:awsmwaaenvironment",
        "//apis/dev/planton/provider/aws/awsnatgateway/v1:awsnatgateway",
        "//apis/dev/planton/provider/aws/awsneptunecluster/v1:awsneptunecluster",
        "//apis/dev/planton/provider/aws/awsnetworkloadbalancer/v1:awsnetworkloadbalancer",
        "//apis/dev/planton/provider/aws/awsopensearchdomain/v1:awsopensearchdomain",
        "//apis/dev/planton/provider/aws/awsrdscluster/v1:awsrdscluster",
        "//apis/dev/planton/provider/aws/awsrdsinstance/v1:awsrdsinstance",
        "//apis/dev/planton/provider/aws/awsrediselasticache/v1:awsrediselasticache",
        "//apis/dev/planton/provider/aws/awsredshiftcluster/v1:awsredshiftcluster",
        "//apis/dev/planton/provider/aws/awsroute53dnsrecord/v1:awsroute53dnsrecord",
        "//apis/dev/planton/provider/aws/awsroute53zone/v1:awsroute53zone",
        "//apis/dev/planton/provider/aws/awss3bucket/v1:awss3bucket",
        "//apis/dev/planton/provider/aws/awss3objectset/v1:awss3objectset",
        "//apis/dev/planton/provider/aws/awssagemakerdomain/v1:awssagemakerdomain",
        "//apis/dev/planton/provider/aws/awssecretsmanager/v1:awssecretsmanager",
        "//apis/dev/planton/provider/aws/awssecuritygroup/v1:awssecuritygroup",
        "//apis/dev/planton/provider/aws/awsserverlesselasticache/v1:awsserverlesselasticache",
        "//apis/dev/planton/provider/aws/awssnstopic/v1:awssnstopic",
        "//apis/dev/planton/provider/aws/awssqsqueue/v1:awssqsqueue",
        "//apis/dev/planton/provider/aws/awsstepfunction/v1:awsstepfunction",
        "//apis/dev/planton/provider/aws/awssubnet/v1:awssubnet",
        "//apis/dev/planton/provider/aws/awstransitgateway/v1:awstransitgateway",
        "//apis/dev/planton/provider/aws/awsvpc/v1:awsvpc",
        "//apis/dev/planton/provider/aws/awswafwebacl/v1:awswafwebacl",
        "//apis/dev/planton/provider/azure/azureakscluster/v1:azureakscluster",
        "//apis/dev/planton/provider/azure/azureaksnodepool/v1:azureaksnodepool",
        "//apis/dev/planton/provider/azure/azureapplicationgateway/v1:azureapplicationgateway",
        "//apis/dev/planton/provider/azure/azureapplicationinsights/v1:azureapplicationinsights",
        "//apis/dev/planton/provider/azure/azurecontainerapp/v1:azurecontainerapp",
        "//apis/dev/planton/provider/azure/azurecontainerappenvironment/v1:azurecontainerappenvironment",
        "//apis/dev/planton/provider/azure/azurecontainerregistry/v1:azurecontainerregistry",
        "//apis/dev/planton/provider/azure/azurecosmosdbaccount/v1:azurecosmosdbaccount",
        "//apis/dev/planton/provider/azure/azurednsrecord/v1:azurednsrecord",
        "//apis/dev/planton/provider/azure/azurednszone/v1:azurednszone",
        "//apis/dev/planton/provider/azure/azureeventhubnamespace/v1:azureeventhubnamespace",
        "//apis/dev/planton/provider/azure/azurefrontdoorprofile/v1:azurefrontdoorprofile",
        "//apis/dev/planton/provider/azure/azurefunctionapp/v1:azurefunctionapp",
        "//apis/dev/planton/provider/azure/azurekeyvault/v1:azurekeyvault",
        "//apis/dev/planton/provider/azure/azurelinuxwebapp/v1:azurelinuxwebapp",
        "//apis/dev/planton/provider/azure/azureloadbalancer/v1:azureloadbalancer",
        "//apis/dev/planton/provider/azure/azureloganalyticsworkspace/v1:azureloganalyticsworkspace",
        "//apis/dev/planton/provider/azure/azuremssqlserver/v1:azuremssqlserver",
        "//apis/dev/planton/provider/azure/azuremysqlflexibleserver/v1:azuremysqlflexibleserver",
        "//apis/dev/planton/provider/azure/azurenatgateway/v1:azurenatgateway",
        "//apis/dev/planton/provider/azure/azurenetworksecuritygroup/v1:azurenetworksecuritygroup",
        "//apis/dev/planton/provider/azure/azurepostgresqlflexibleserver/v1:azurepostgresqlflexibleserver",
        "//apis/dev/planton/provider/azure/azureprivatednszone/v1:azureprivatednszone",
        "//apis/dev/planton/provider/azure/azureprivateendpoint/v1:azureprivateendpoint",
        "//apis/dev/planton/provider/azure/azurepublicip/v1:azurepublicip",
        "//apis/dev/planton/provider/azure/azurerediscache/v1:azurerediscache",
        "//apis/dev/planton/provider/azure/azureresourcegroup/v1:azureresourcegroup",
        "//apis/dev/planton/provider/azure/azureservicebusnamespace/v1:azureservicebusnamespace",
        "//apis/dev/planton/provider/azure/azureserviceplan/v1:azureserviceplan",
        "//apis/dev/planton/provider/azure/azurestorageaccount/v1:azurestorageaccount",
        "//apis/dev/planton/provider/azure/azuresubnet/v1:azuresubnet",
        "//apis/dev/planton/provider/azure/azureuserassignedidentity/v1:azureuserassignedidentity",
        "//apis/dev/planton/provider/azure/azurevirtualmachine/v1:azurevirtualmachine",
        "//apis/dev/planton/provider/azure/azurevpc/v1:azurevpc",
        "//apis/dev/planton/provider/civo/civobucket/v1:civobucket",
        "//apis/dev/planton/provider/civo/civocertificate/v1:civocertificate",
        "//apis/dev/planton/provider/civo/civocomputeinstance/v1:civocomputeinstance",
        "//apis/dev/planton/provider/civo/civodatabase/v1:civodatabase",
        "//apis/dev/planton/provider/civo/civodnsrecord/v1:civodnsrecord",
        "//apis/dev/planton/provider/civo/civodnszone/v1:civodnszone",
        "//apis/dev/planton/provider/civo/civofirewall/v1:civofirewall",
        "//apis/dev/planton/provider/civo/civoipaddress/v1:civoipaddress",
        "//apis/dev/planton/provider/civo/civokubernetescluster/v1:civokubernetescluster",
        "//apis/dev/planton/provider/civo/civokubernetesnodepool/v1:civokubernetesnodepool",
        "//apis/dev/planton/provider/civo/civovolume/v1:civovolume",
        "//apis/dev/planton/provider/civo/civovpc/v1:civovpc",
        "//apis/dev/planton/provider/cloudflare/cloudflarecertificatepack/v1:cloudflarecertificatepack",
        "//apis/dev/planton/provider/cloudflare/cloudflarecustomhostname/v1:cloudflarecustomhostname",
        "//apis/dev/planton/provider/cloudflare/cloudflarecustomhostnamefallbackorigin/v1:cloudflarecustomhostnamefallbackorigin",
        "//apis/dev/planton/provider/cloudflare/cloudflared1database/v1:cloudflared1database",
        "//apis/dev/planton/provider/cloudflare/cloudflarednsrecord/v1:cloudflarednsrecord",
        "//apis/dev/planton/provider/cloudflare/cloudflarednszone/v1:cloudflarednszone",
        "//apis/dev/planton/provider/cloudflare/cloudflareemailroutingaddress/v1:cloudflareemailroutingaddress",
        "//apis/dev/planton/provider/cloudflare/cloudflareemailroutingrule/v1:cloudflareemailroutingrule",
        "//apis/dev/planton/provider/cloudflare/cloudflareemailroutingzone/v1:cloudflareemailroutingzone",
        "//apis/dev/planton/provider/cloudflare/cloudflarehyperdriveconfig/v1:cloudflarehyperdriveconfig",
        "//apis/dev/planton/provider/cloudflare/cloudflarekvnamespace/v1:cloudflarekvnamespace",
        "//apis/dev/planton/provider/cloudflare/cloudflarelist/v1:cloudflarelist",
        "//apis/dev/planton/provider/cloudflare/cloudflarelistitem/v1:cloudflarelistitem",
        "//apis/dev/planton/provider/cloudflare/cloudflareloadbalancer/v1:cloudflareloadbalancer",
        "//apis/dev/planton/provider/cloudflare/cloudflareloadbalancermonitor/v1:cloudflareloadbalancermonitor",
        "//apis/dev/planton/provider/cloudflare/cloudflareloadbalancerpool/v1:cloudflareloadbalancerpool",
        "//apis/dev/planton/provider/cloudflare/cloudflareorigincacertificate/v1:cloudflareorigincacertificate",
        "//apis/dev/planton/provider/cloudflare/cloudflarepagesproject/v1:cloudflarepagesproject",
        "//apis/dev/planton/provider/cloudflare/cloudflarequeue/v1:cloudflarequeue",
        "//apis/dev/planton/provider/cloudflare/cloudflarer2bucket/v1:cloudflarer2bucket",
        "//apis/dev/planton/provider/cloudflare/cloudflareruleset/v1:cloudflareruleset",
        "//apis/dev/planton/provider/cloudflare/cloudflareturnstilewidget/v1:cloudflareturnstilewidget",
        "//apis/dev/planton/provider/cloudflare/cloudflareworker/v1:cloudflareworker",
        "//apis/dev/planton/provider/cloudflare/cloudflareworkerskvpair/v1:cloudflareworkerskvpair",
        "//apis/dev/planton/provider/cloudflare/cloudflarezerotrustaccessapplication/v1:cloudflarezerotrustaccessapplication",
        "//apis/dev/planton/provider/cloudflare/cloudflarezerotrustaccessgroup/v1:cloudflarezerotrustaccessgroup",
        "//apis/dev/planton/provider/cloudflare/cloudflarezerotrustaccesspolicy/v1:cloudflarezerotrustaccesspolicy",
        "//apis/dev/planton/provider/cloudflare/cloudflarezerotrusttunnel/v1:cloudflarezerotrusttunnel",
        "//apis/dev/planton/provider/cloudflare/cloudflarezerotrusttunnelroute/v1:cloudflarezerotrusttunnelroute",
        "//apis/dev/planton/provider/cloudflare/cloudflarezerotrusttunnelvirtualnetwork/v1:cloudflarezerotrusttunnelvirtualnetwork",
        "//apis/dev/planton/provider/confluent/confluentkafka/v1:confluentkafka",
        "//apis/dev/planton/provider/digitalocean/digitaloceanappplatformservice/v1:digitaloceanappplatformservice",
        "//apis/dev/planton/provider/digitalocean/digitaloceanbucket/v1:digitaloceanbucket",
        "//apis/dev/planton/provider/digitalocean/digitaloceancertificate/v1:digitaloceancertificate",
        "//apis/dev/planton/provider/digitalocean/digitaloceancontainerregistry/v1:digitaloceancontainerregistry",
        "//apis/dev/planton/provider/digitalocean/digitaloceandatabasecluster/v1:digitaloceandatabasecluster",
        "//apis/dev/planton/provider/digitalocean/digitaloceandnsrecord/v1:digitaloceandnsrecord",
        "//apis/dev/planton/provider/digitalocean/digitaloceandnszone/v1:digitaloceandnszone",
        "//apis/dev/planton/provider/digitalocean/digitaloceandroplet/v1:digitaloceandroplet",
        "//apis/dev/planton/provider/digitalocean/digitaloceanfirewall/v1:digitaloceanfirewall",
        "//apis/dev/planton/provider/digitalocean/digitaloceanfunction/v1:digitaloceanfunction",
        "//apis/dev/planton/provider/digitalocean/digitaloceankubernetescluster/v1:digitaloceankubernetescluster",
        "//apis/dev/planton/provider/digitalocean/digitaloceankubernetesnodepool/v1:digitaloceankubernetesnodepool",
        "//apis/dev/planton/provider/digitalocean/digitaloceanloadbalancer/v1:digitaloceanloadbalancer",
        "//apis/dev/planton/provider/digitalocean/digitaloceanvolume/v1:digitaloceanvolume",
        "//apis/dev/planton/provider/digitalocean/digitaloceanvpc/v1:digitaloceanvpc",
        "//apis/dev/planton/provider/gcp/gcpalloydbcluster/v1:gcpalloydbcluster",
        "//apis/dev/planton/provider/gcp/gcpartifactregistryrepo/v1:gcpartifactregistryrepo",
        "//apis/dev/planton/provider/gcp/gcpbigquerydataset/v1:gcpbigquerydataset",
        "//apis/dev/planton/provider/gcp/gcpbigtableinstance/v1:gcpbigtableinstance",
        "//apis/dev/planton/provider/gcp/gcpcertmanagercert/v1:gcpcertmanagercert",
        "//apis/dev/planton/provider/gcp/gcpcloudarmorpolicy/v1:gcpcloudarmorpolicy",
        "//apis/dev/planton/provider/gcp/gcpcloudcdn/v1:gcpcloudcdn",
        "//apis/dev/planton/provider/gcp/gcpcloudcomposerenvironment/v1:gcpcloudcomposerenvironment",
        "//apis/dev/planton/provider/gcp/gcpcloudfunction/v1:gcpcloudfunction",
        "//apis/dev/planton/provider/gcp/gcpcloudrun/v1:gcpcloudrun",
        "//apis/dev/planton/provider/gcp/gcpcloudschedulerjob/v1:gcpcloudschedulerjob",
        "//apis/dev/planton/provider/gcp/gcpcloudsql/v1:gcpcloudsql",
        "//apis/dev/planton/provider/gcp/gcpcloudtasksqueue/v1:gcpcloudtasksqueue",
        "//apis/dev/planton/provider/gcp/gcpcomputeinstance/v1:gcpcomputeinstance",
        "//apis/dev/planton/provider/gcp/gcpdataproccluster/v1:gcpdataproccluster",
        "//apis/dev/planton/provider/gcp/gcpdataprocvirtualcluster/v1:gcpdataprocvirtualcluster",
        "//apis/dev/planton/provider/gcp/gcpdnsrecord/v1:gcpdnsrecord",
        "//apis/dev/planton/provider/gcp/gcpdnszone/v1:gcpdnszone",
        "//apis/dev/planton/provider/gcp/gcpfilestoreinstance/v1:gcpfilestoreinstance",
        "//apis/dev/planton/provider/gcp/gcpfirestoredatabase/v1:gcpfirestoredatabase",
        "//apis/dev/planton/provider/gcp/gcpfirewallrule/v1:gcpfirewallrule",
        "//apis/dev/planton/provider/gcp/gcpgcsbucket/v1:gcpgcsbucket",
        "//apis/dev/planton/provider/gcp/gcpgkecluster/v1:gcpgkecluster",
        "//apis/dev/planton/provider/gcp/gcpgkenodepool/v1:gcpgkenodepool",
        "//apis/dev/planton/provider/gcp/gcpgkeworkloadidentitybinding/v1:gcpgkeworkloadidentitybinding",
        "//apis/dev/planton/provider/gcp/gcpglobaladdress/v1:gcpglobaladdress",
        "//apis/dev/planton/provider/gcp/gcpkmskey/v1:gcpkmskey",
        "//apis/dev/planton/provider/gcp/gcpkmskeyring/v1:gcpkmskeyring",
        "//apis/dev/planton/provider/gcp/gcpmemorystoreinstance/v1:gcpmemorystoreinstance",
        "//apis/dev/planton/provider/gcp/gcpproject/v1:gcpproject",
        "//apis/dev/planton/provider/gcp/gcppubsubsubscription/v1:gcppubsubsubscription",
        "//apis/dev/planton/provider/gcp/gcppubsubtopic/v1:gcppubsubtopic",
        "//apis/dev/planton/provider/gcp/gcpredisinstance/v1:gcpredisinstance",
        "//apis/dev/planton/provider/gcp/gcprouternat/v1:gcprouternat",
        "//apis/dev/planton/provider/gcp/gcpsecretsmanager/v1:gcpsecretsmanager",
        "//apis/dev/planton/provider/gcp/gcpserviceaccount/v1:gcpserviceaccount",
        "//apis/dev/planton/provider/gcp/gcpspannerdatabase/v1:gcpspannerdatabase",
        "//apis/dev/planton/provider/gcp/gcpspannerinstance/v1:gcpspannerinstance",
        "//apis/dev/planton/provider/gcp/gcpsubnetwork/v1:gcpsubnetwork",
        "//apis/dev/planton/provider/gcp/gcpvertexaiendpoint/v1:gcpvertexaiendpoint",
        "//apis/dev/planton/provider/gcp/gcpvertexainotebook/v1:gcpvertexainotebook",
        "//apis/dev/planton/provider/gcp/gcpvpc/v1:gcpvpc",
        "//apis/dev/planton/provider/hetznercloud/hetznercloudcertificate/v1:hetznercloudcertificate",
        "//apis/dev/planton/provider/hetznercloud/hetznerclouddnszone/v1:hetznerclouddnszone",
        "//apis/dev/planton/provider/hetznercloud/hetznercloudfirewall/v1:hetznercloudfirewall",
        "//apis/dev/planton/provider/hetznercloud/hetznercloudfloatingip/v1:hetznercloudfloatingip",
        "//apis/dev/planton/provider/hetznercloud/hetznercloudloadbalancer/v1:hetznercloudloadbalancer",
        "//apis/dev/planton/provider/hetznercloud/hetznercloudnetwork/v1:hetznercloudnetwork",
        "//apis/dev/planton/provider/hetznercloud/hetznercloudplacementgroup/v1:hetznercloudplacementgroup",
        "//apis/dev/planton/provider/hetznercloud/hetznercloudprimaryip/v1:hetznercloudprimaryip",
        "//apis/dev/planton/provider/hetznercloud/hetznercloudserver/v1:hetznercloudserver",
        "//apis/dev/planton/provider/hetznercloud/hetznercloudsnapshot/v1:hetznercloudsnapshot",
        "//apis/dev/planton/provider/hetznercloud/hetznercloudsshkey/v1:hetznercloudsshkey",
        "//apis/dev/planton/provider/hetznercloud/hetznercloudvolume/v1:hetznercloudvolume",
        "//apis/dev/planton/provider/kubernetes/kubernetesaltinityoperator/v1:kubernetesaltinityoperator",
        "//apis/dev/planton/provider/kubernetes/kubernetesargocd/v1:kubernetesargocd",
        "//apis/dev/planton/provider/kubernetes/kubernetesauthorizationpolicy/v1:kubernetesauthorizationpolicy",
        "//apis/dev/planton/provider/kubernetes/kubernetescertificate/v1:kubernetescertificate",
        "//apis/dev/planton/provider/kubernetes/kubernetescertmanager/v1:kubernetescertmanager",
        "//apis/dev/planton/provider/kubernetes/kubernetesclickhouse/v1:kubernetesclickhouse",
        "//apis/dev/planton/provider/kubernetes/kubernetesclusterissuer/v1:kubernetesclusterissuer",
        "//apis/dev/planton/provider/kubernetes/kubernetescronjob/v1:kubernetescronjob",
        "//apis/dev/planton/provider/kubernetes/kubernetesdaemonset/v1:kubernetesdaemonset",
        "//apis/dev/planton/provider/kubernetes/kubernetesdeployment/v1:kubernetesdeployment",
        "//apis/dev/planton/provider/kubernetes/kubernetesdestinationrule/v1:kubernetesdestinationrule",
        "//apis/dev/planton/provider/kubernetes/kuberneteselasticoperator/v1:kuberneteselasticoperator",
        "//apis/dev/planton/provider/kubernetes/kuberneteselasticsearch/v1:kuberneteselasticsearch",
        "//apis/dev/planton/provider/kubernetes/kubernetesenvoyfilter/v1:kubernetesenvoyfilter",
        "//apis/dev/planton/provider/kubernetes/kubernetesexternaldns/v1:kubernetesexternaldns",
        "//apis/dev/planton/provider/kubernetes/kubernetesexternalsecrets/v1:kubernetesexternalsecrets",
        "//apis/dev/planton/provider/kubernetes/kubernetesgateway/v1:kubernetesgateway",
        "//apis/dev/planton/provider/kubernetes/kubernetesgatewayapicrds/v1:kubernetesgatewayapicrds",
        "//apis/dev/planton/provider/kubernetes/kubernetesgatewayclass/v1:kubernetesgatewayclass",
        "//apis/dev/planton/provider/kubernetes/kubernetesgharunnerscaleset/v1:kubernetesgharunnerscaleset",
        "//apis/dev/planton/provider/kubernetes/kubernetesgharunnerscalesetcontroller/v1:kubernetesgharunnerscalesetcontroller",
        "//apis/dev/planton/provider/kubernetes/kubernetesgitlab/v1:kubernetesgitlab",
        "//apis/dev/planton/provider/kubernetes/kubernetesgrafana/v1:kubernetesgrafana",
        "//apis/dev/planton/provider/kubernetes/kubernetesgrpcroute/v1:kubernetesgrpcroute",
        "//apis/dev/planton/provider/kubernetes/kubernetesharbor/v1:kubernetesharbor",
        "//apis/dev/planton/provider/kubernetes/kuberneteshelmrelease/v1:kuberneteshelmrelease",
        "//apis/dev/planton/provider/kubernetes/kuberneteshttproute/v1:kuberneteshttproute",
        "//apis/dev/planton/provider/kubernetes/kubernetesingressnginx/v1:kubernetesingressnginx",
        "//apis/dev/planton/provider/kubernetes/kubernetesissuer/v1:kubernetesissuer",
        "//apis/dev/planton/provider/kubernetes/kubernetesistio/v1:kubernetesistio",
        "//apis/dev/planton/provider/kubernetes/kubernetesistiobasecrds/v1:kubernetesistiobasecrds",
        "//apis/dev/planton/provider/kubernetes/kubernetesjenkins/v1:kubernetesjenkins",
        "//apis/dev/planton/provider/kubernetes/kubernetesjob/v1:kubernetesjob",
        "//apis/dev/planton/provider/kubernetes/kuberneteskafka/v1:kuberneteskafka",
        "//apis/dev/planton/provider/kubernetes/kuberneteskeycloak/v1:kuberneteskeycloak",
        "//apis/dev/planton/provider/kubernetes/kuberneteslocust/v1:kuberneteslocust",
        "//apis/dev/planton/provider/kubernetes/kubernetesmanifest/v1:kubernetesmanifest",
        "//apis/dev/planton/provider/kubernetes/kubernetesmongodb/v1:kubernetesmongodb",
        "//apis/dev/planton/provider/kubernetes/kubernetesnamespace/v1:kubernetesnamespace",
        "//apis/dev/planton/provider/kubernetes/kubernetesnats/v1:kubernetesnats",
        "//apis/dev/planton/provider/kubernetes/kubernetesneo4j/v1:kubernetesneo4j",
        "//apis/dev/planton/provider/kubernetes/kubernetesopenbao/v1:kubernetesopenbao",
        "//apis/dev/planton/provider/kubernetes/kubernetesopenfga/v1:kubernetesopenfga",
        "//apis/dev/planton/provider/kubernetes/kubernetespeerauthentication/v1:kubernetespeerauthentication",
        "//apis/dev/planton/provider/kubernetes/kubernetesperconamongooperator/v1:kubernetesperconamongooperator",
        "//apis/dev/planton/provider/kubernetes/kubernetesperconamysqloperator/v1:kubernetesperconamysqloperator",
        "//apis/dev/planton/provider/kubernetes/kubernetesperconapostgresoperator/v1:kubernetesperconapostgresoperator",
        "//apis/dev/planton/provider/kubernetes/kubernetespostgres/v1:kubernetespostgres",
        "//apis/dev/planton/provider/kubernetes/kubernetesprometheus/v1:kubernetesprometheus",
        "//apis/dev/planton/provider/kubernetes/kubernetesredis/v1:kubernetesredis",
        "//apis/dev/planton/provider/kubernetes/kubernetesreferencegrant/v1:kubernetesreferencegrant",
        "//apis/dev/planton/provider/kubernetes/kubernetesrequestauthentication/v1:kubernetesrequestauthentication",
        "//apis/dev/planton/provider/kubernetes/kubernetesrookcephcluster/v1:kubernetesrookcephcluster",
        "//apis/dev/planton/provider/kubernetes/kubernetesrookcephoperator/v1:kubernetesrookcephoperator",
        "//apis/dev/planton/provider/kubernetes/kubernetessecret/v1:kubernetessecret",
        "//apis/dev/planton/provider/kubernetes/kubernetesservice/v1:kubernetesservice",
        "//apis/dev/planton/provider/kubernetes/kubernetesserviceentry/v1:kubernetesserviceentry",
        "//apis/dev/planton/provider/kubernetes/kubernetessignoz/v1:kubernetessignoz",
        "//apis/dev/planton/provider/kubernetes/kubernetessolr/v1:kubernetessolr",
        "//apis/dev/planton/provider/kubernetes/kubernetessolroperator/v1:kubernetessolroperator",
        "//apis/dev/planton/provider/kubernetes/kubernetesstatefulset/v1:kubernetesstatefulset",
        "//apis/dev/planton/provider/kubernetes/kubernetesstrimzikafkaoperator/v1:kubernetesstrimzikafkaoperator",
        "//apis/dev/planton/provider/kubernetes/kubernetestcproute/v1:kubernetestcproute",
        "//apis/dev/planton/provider/kubernetes/kubernetestekton/v1:kubernetestekton",
        "//apis/dev/planton/provider/kubernetes/kubernetestektonoperator/v1:kubernetestektonoperator",
        "//apis/dev/planton/provider/kubernetes/kubernetestelemetry/v1:kubernetestelemetry",
        "//apis/dev/planton/provider/kubernetes/kubernetestemporal/v1:kubernetestemporal",
        "//apis/dev/planton/provider/kubernetes/kubernetestlsroute/v1:kubernetestlsroute",
        "//apis/dev/planton/provider/kubernetes/kuberneteszalandopostgresoperator/v1:kuberneteszalandopostgresoperator",
        "//apis/dev/planton/provider/oci/ocialarm/v1:ocialarm",
        "//apis/dev/planton/provider/oci/ociapigateway/v1:ociapigateway",
        "//apis/dev/planton/provider/oci/ociapplicationloadbalancer/v1:ociapplicationloadbalancer",
        "//apis/dev/planton/provider/oci/ociautonomousdatabase/v1:ociautonomousdatabase",
        "//apis/dev/planton/provider/oci/ocibastion/v1:ocibastion",
        "//apis/dev/planton/provider/oci/ociblockvolume/v1:ociblockvolume",
        "//apis/dev/planton/provider/oci/ocicompartment/v1:ocicompartment",
        "//apis/dev/planton/provider/oci/ocicomputeinstance/v1:ocicomputeinstance",
        "//apis/dev/planton/provider/oci/ocicontainerenginecluster/v1:ocicontainerenginecluster",
        "//apis/dev/planton/provider/oci/ocicontainerenginenodepool/v1:ocicontainerenginenodepool",
        "//apis/dev/planton/provider/oci/ocicontainerinstance/v1:ocicontainerinstance",
        "//apis/dev/planton/provider/oci/ocidbsystem/v1:ocidbsystem",
        "//apis/dev/planton/provider/oci/ocidevopsproject/v1:ocidevopsproject",
        "//apis/dev/planton/provider/oci/ocidnsrecord/v1:ocidnsrecord",
        "//apis/dev/planton/provider/oci/ocidnszone/v1:ocidnszone",
        "//apis/dev/planton/provider/oci/ocidynamicgroup/v1:ocidynamicgroup",
        "//apis/dev/planton/provider/oci/ocidynamicroutinggateway/v1:ocidynamicroutinggateway",
        "//apis/dev/planton/provider/oci/ocifilesystem/v1:ocifilesystem",
        "//apis/dev/planton/provider/oci/ocifunctionsapplication/v1:ocifunctionsapplication",
        "//apis/dev/planton/provider/oci/ociidentitypolicy/v1:ociidentitypolicy",
        "//apis/dev/planton/provider/oci/ocikmskey/v1:ocikmskey",
        "//apis/dev/planton/provider/oci/ocikmsvault/v1:ocikmsvault",
        "//apis/dev/planton/provider/oci/ociloggroup/v1:ociloggroup",
        "//apis/dev/planton/provider/oci/ocimysqldbsystem/v1:ocimysqldbsystem",
        "//apis/dev/planton/provider/oci/ocinetworkfirewall/v1:ocinetworkfirewall",
        "//apis/dev/planton/provider/oci/ocinetworkloadbalancer/v1:ocinetworkloadbalancer",
        "//apis/dev/planton/provider/oci/ocinosqltable/v1:ocinosqltable",
        "//apis/dev/planton/provider/oci/ociobjectstoragebucket/v1:ociobjectstoragebucket",
        "//apis/dev/planton/provider/oci/ocipostgresqldbsystem/v1:ocipostgresqldbsystem",
        "//apis/dev/planton/provider/oci/ocipublicip/v1:ocipublicip",
        "//apis/dev/planton/provider/oci/ociqueue/v1:ociqueue",
        "//apis/dev/planton/provider/oci/ocirediscluster/v1:ocirediscluster",
        "//apis/dev/planton/provider/oci/ocisecuritygroup/v1:ocisecuritygroup",
        "//apis/dev/planton/provider/oci/ocistreampool/v1:ocistreampool",
        "//apis/dev/planton/provider/oci/ocisubnet/v1:ocisubnet",
        "//apis/dev/planton/provider/oci/ocivaultsecret/v1:ocivaultsecret",
        "//apis/dev/planton/provider/oci/ocivcn/v1:ocivcn",
        "//apis/dev/planton/provider/openfga/openfgaauthorizationmodel/v1:openfgaauthorizationmodel",
        "//apis/dev/planton/provider/openfga/openfgarelationshiptuple/v1:openfgarelationshiptuple",
        "//apis/dev/planton/provider/openfga/openfgastore/v1:openfgastore",
        "//apis/dev/planton/provider/openstack/openstackapplicationcredential/v1:openstackapplicationcredential",
        "//apis/dev/planton/provider/openstack/openstackdnsrecord/v1:openstackdnsrecord",
        "//apis/dev/planton/provider/openstack/openstackdnszone/v1:openstackdnszone",
        "//apis/dev/planton/provider/openstack/openstackfloatingip/v1:openstackfloatingip",
        "//apis/dev/planton/provider/openstack/openstackfloatingipassociate/v1:openstackfloatingipassociate",
        "//apis/dev/planton/provider/openstack/openstackimage/v1:openstackimage",
        "//apis/dev/planton/provider/openstack/openstackinstance/v1:openstackinstance",
        "//apis/dev/planton/provider/openstack/openstackkeypair/v1:openstackkeypair",
        "//apis/dev/planton/provider/openstack/openstackloadbalancer/v1:openstackloadbalancer",
        "//apis/dev/planton/provider/openstack/openstackloadbalancerlistener/v1:openstackloadbalancerlistener",
        "//apis/dev/planton/provider/openstack/openstackloadbalancermember/v1:openstackloadbalancermember",
        "//apis/dev/planton/provider/openstack/openstackloadbalancermonitor/v1:openstackloadbalancermonitor",
        "//apis/dev/planton/provider/openstack/openstackloadbalancerpool/v1:openstackloadbalancerpool",
        "//apis/dev/planton/provider/openstack/openstacknetwork/v1:openstacknetwork",
        "//apis/dev/planton/provider/openstack/openstacknetworkport/v1:openstacknetworkport",
        "//apis/dev/planton/provider/openstack/openstackproject/v1:openstackproject",
        "//apis/dev/planton/provider/openstack/openstackroleassignment/v1:openstackroleassignment",
        "//apis/dev/planton/provider/openstack/openstackrouter/v1:openstackrouter",
        "//apis/dev/planton/provider/openstack/openstackrouterinterface/v1:openstackrouterinterface",
        "//apis/dev/planton/provider/openstack/openstacksecuritygroup/v1:openstacksecuritygroup",
        "//apis/dev/planton/provider/openstack/openstacksecuritygrouprule/v1:openstacksecuritygrouprule",
        "//apis/dev/planton/provider/openstack/openstackservergroup/v1:openstackservergroup",
        "//apis/dev/planton/provider/openstack/openstacksubnet/v1:openstacksubnet",
        "//apis/dev/planton/provider/openstack/openstackvolume/v1:openstackvolume",
        "//apis/dev/planton/provider/openstack/openstackvolumeattach/v1:openstackvolumeattach",
        "//apis/dev/planton/provider/scaleway/scalewayblockvolume/v1:scalewayblockvolume",
        "//apis/dev/planton/provider/scaleway/scalewaycontainerregistry/v1:scalewaycontainerregistry",
        "//apis/dev/planton/provider/scaleway/scalewaydnsrecord/v1:scalewaydnsrecord",
        "//apis/dev/planton/provider/scaleway/scalewaydnszone/v1:scalewaydnszone",
        "//apis/dev/planton/provider/scaleway/scalewayinstance/v1:scalewayinstance",
        "//apis/dev/planton/provider/scaleway/scalewayinstancesecuritygroup/v1:scalewayinstancesecuritygroup",
        "//apis/dev/planton/provider/scaleway/scalewaykapsulecluster/v1:scalewaykapsulecluster",
        "//apis/dev/planton/provider/scaleway/scalewaykapsulepool/v1:scalewaykapsulepool",
        "//apis/dev/planton/provider/scaleway/scalewayloadbalancer/v1:scalewayloadbalancer",
        "//apis/dev/planton/provider/scaleway/scalewaymongodbinstance/v1:scalewaymongodbinstance",
        "//apis/dev/planton/provider/scaleway/scalewayobjectbucket/v1:scalewayobjectbucket",
        "//apis/dev/planton/provider/scaleway/scalewayprivatenetwork/v1:scalewayprivatenetwork",
        "//apis/dev/planton/provider/scaleway/scalewaypublicgateway/v1:scalewaypublicgateway",
        "//apis/dev/planton/provider/scaleway/scalewayrdbinstance/v1:scalewayrdbinstance",
        "//apis/dev/planton/provider/scaleway/scalewayrediscluster/v1:scalewayrediscluster",
        "//apis/dev/planton/provider/scaleway/scalewayserverlesscontainer/v1:scalewayserverlesscontainer",
        "//apis/dev/planton/provider/scaleway/scalewayserverlessfunction/v1:scalewayserverlessfunction",
        "//apis/dev/planton/provider/scaleway/scalewayvpc/v1:scalewayvpc",
        "//apis/dev/planton/provider/snowflake/snowflakedatabase/v1:snowflakedatabase",
        "//apis/dev/planton/shared/cloudresourcekind",
        "//pkg/apis/gvk",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
    ],
)

go_test(
    name = "crkreflect_test",
    srcs = [
        "kind_by_id_prefix_test.go",
        "kind_from_string_test.go",
        "prerequisites_test.go",
    ],
    embed = [":crkreflect"],
    deps = ["//apis/dev/planton/shared/cloudresourcekind"],
)
