load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "refcheck",
    srcs = ["analyze.go"],
    importpath = "github.com/plantonhq/planton/pkg/refcheck",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/dev/planton/shared/cloudresourcekind",
        "//apis/dev/planton/shared/foreignkey/v1:foreignkey",
        "//pkg/crkreflect",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
    ],
)

go_test(
    name = "refcheck_test",
    srcs = ["analyze_test.go"],
    embed = [":refcheck"],
)
