load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "secretcoverage",
    srcs = [
        "analyze.go",
        "baseline.go",
        "heuristic.go",
        "report.go",
    ],
    importpath = "github.com/plantonhq/planton/pkg/secretcoverage",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/dev/planton/shared/cloudresourcekind",
        "//apis/dev/planton/shared/options",
        "//pkg/crkreflect",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
    ],
)

go_test(
    name = "secretcoverage_test",
    srcs = [
        "coverage_test.go",
        "heuristic_test.go",
        "report_test.go",
    ],
    embed = [":secretcoverage"],
    deps = [
        "//apis/dev/planton/shared/cloudresourcekind",
        "//pkg/crkreflect",
    ],
)
